--- a/roles/base/tasks/packages.yml
+++ b/roles/base/tasks/packages.yml
@@ -62,21 +62,21 @@
       ignore_errors: true
       register: partial_package_result
 
-    - name: report failed variable installations
-      debug:
-        msg: "Failed to install some packages: {{ variable_package_result.msg | default('Unknown error') }}"
-      when: 
-        - variable_package_result is defined
-        - variable_package_result.failed | default(false)
+  #   - name: report failed variable installations
+  #     debug:
+  #       msg: "Failed to install some packages: {{ variable_package_result.msg | default('Unknown error') }}"
+  #     when: 
+  #       - variable_package_result is defined
+  #       - variable_package_result.failed | default(false)
 
-    - name: report failed partial availability installations
-      debug:
-        msg: "Failed to install some packages: {{ partial_package_result.msg | default('Unknown error') }}"
-      when: 
-        - partial_package_result is defined
-        - partial_package_result.failed | default(false)
+  #   - name: report failed partial availability installations
+  #     debug:
+  #       msg: "Failed to install some packages: {{ partial_package_result.msg | default('Unknown error') }}"
+  #     when: 
+  #       - partial_package_result is defined
+  #       - partial_package_result.failed | default(false)
         
-  rescue:
-    - name: handle package installation failure
-      debug:
-        msg: "Package installation failed. Check package names for your distribution."
+  # rescue:
+  #   - name: handle package installation failure
+  #     debug:
+  #       msg: "Package installation failed. Check package names for your distribution."
