--- a/roles/base/vars/Debian.yml
+++ b/roles/base/vars/Debian.yml
@@ -7,7 +7,7 @@ fd_package: fd-find
 init_status: systemctl status
 init_start: systemctl start
 init_restart: systemctl restart
-bat: batcat
+bat: bat
 pkgmgr_install: nala install
 pkgmgr_search: nala search
 pkgmgr_upgrade: nala upgrade
